install formatter gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
+            <li><%= link_to "Home", '#' %></li>
+            <li><%= link_to "Help", '#' %></li>
+            <li><%= link_to "Log in", '#' %></li>
+        </div>
+    </header>
     <%= yield %>
 </body>
 
